fix: role selection alignement

--- a/resources/scss/components/Modal/_roles-page.scss
+++ b/resources/scss/components/Modal/_roles-page.scss
@@ -47,7 +47,7 @@
 	flex-direction: column;
 	gap: space(2);
 	align-items: center;
-	width: 85px;
+	width: 90px;
 
 	svg {
 		height: 64px;
